--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,21 @@
       <artifactId>slf4j-simple</artifactId>
       <version>2.0.16</version>
     </dependency>
+
+    <!-- API estándar Jakarta JSON-P -->
+    <dependency>
+      <groupId>jakarta.json</groupId>
+      <artifactId>jakarta.json-api</artifactId>
+      <version>2.1.3</version>
+    </dependency>
+
+    <!-- Implementación JSON-P (Parsson) para Java SE -->
+    <dependency>
+      <groupId>org.eclipse.parsson</groupId>
+      <artifactId>parsson</artifactId>
+      <version>1.1.6</version>
+    </dependency>
+
   </dependencies>
 
   <build>
